--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "car-rentel",
+  "name": "car-rental-project",
   "version": "1.0.0",
-  "main": "data.js",
+  "description": "Luxury Car Rental System",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "express": "^5.1.0",
-    "hbs": "^4.2.0",
+    "express": "^4.17.1",
+    "hbs": "^4.1.1",
     "method-override": "^3.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
